# AG-UI-LangGraph

./: README.md
ag-ui-research-agent/: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
ag-ui-research-agent/src/my_endpoint/: langgraph_research_agent.py  main.py
ag-ui-research-frontend/: next.config.ts  package-lock.json  package.json
ag-ui-research-frontend/src/app/: page.tsx
ag-ui-research-frontend/src/app/api/copilotkit/: route.ts
ag-ui-research-frontend/src/app/components/: Header.tsx  ResearchReport.tsx  ResearchStages.tsx  Researcher.tsx
ag-ui-research-frontend/src/app/copilotkit/: layout.tsx  page.tsx
ag-ui-research-frontend/src/lib/: types.ts
