[project]
name = "my-endpoint"
version = "0.1.0"
description = ""
authors = [
    {name = "John Smith",email = "qaplatformmoderator@gmail.com"}
]
readme = "README.md"
dependencies = [
    "ag-ui-protocol (>=0.1.4,<0.2.0)",
    "openai (>=1.77.0,<2.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "langgraph (>=0.4.1,<0.5.0)",
    "google-search-results (>=2.4.2,<3.0.0)",
    "langchain-core (>=0.3.58,<0.4.0)",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
